refactor: adequate function createProductCard to return product structure of backend

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
       </div>
     </div>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
